<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <!-- Top App Bar -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/barColor"
        app:contentInsetStartWithNavigation="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Plan It"
        app:titleCentered="false">
        <!-- Optional user avatar on the right side -->
        <ImageView
            android:id="@+id/userAvatar"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/user_avatar"
            android:src="@drawable/ic_avatar_placeholder" />
    </com.google.android.material.appbar.MaterialToolbar>

    <!-- RecyclerView for the Job List -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/jobRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/topAppBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <!-- Floating Action Button for adding a new Job -->
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fabAddJob"
        android:layout_width="134dp"
        android:layout_height="60dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/add_job"
        android:text="@string/add_job"
        app:icon="@drawable/ic_add"
        app:layout_constraintBottom_toTopOf="@id/bottomNav"
        app:layout_constraintRight_toRightOf="parent"/>

    <!-- Bottom Navigation Bar -->
    <com.google.android.material.bottomnavigation.BottomNavigationView

        android:id="@+id/bottomNav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/barColor"
        app:itemIconTint="@color/black"
        app:itemTextColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/bottom_navigation_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>
